--- a/index.html
+++ b/index.html
@@ -7,26 +7,22 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="alt.css">
-	<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
-	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'>
+
 </head>
 
 <body>
-	<ul class="nav_bar">
-	  <li style="margin-right:50px;"><a href="projects">Projects</a></li>
-	  <li style="border-bottom: solid; border-color:#E86100"><a href="index">Home</a></li>
-	</ul>
+	
 
 
-	<div class="title_card">
+
+	<div class="content">
 	
-	
-	
-	<div class="left_card">
-	<img src="img/profile.png" width="200" height="200" class="profile"></img>
+   
+
 	<div class="title"><h1>Harry Dong</h1></div>
-	<h3> <a href="#projects" class="title_link">Projects</a> </h3>
-	<h3> <a href="#contact" class="title_link">Contact</a> </h3>
+
 	<div class="footer">
 		<div class="icon">
 		<a class="no_icon" href="files/Harry Dong_CV.pdf"><img src="img/alt_cv.png" width="28" height="28"></img></a>
@@ -38,76 +34,70 @@
 		<a href="mailto:harry.cz.dong@gmail.com"><img src="img/alt_email.png" width="28" height="28"></img></a>
 		</div>
 	</div>
-	</div>
 	
-	<div class="right_card">
-	<h2 class="page_title"> Hi, I'm Harry. </h2>
-	<p class="writing"> On this website, I compile some of the various projects I've been working on.</p>
 	
-	<h2 class="page_title"> About </h2>
-	<p class="writing"> I graduated from the University Of New South Wales, majoring in finance and actuarial studies.  
+	<h2 class="page_title"> About me</h2>
+	<p class="writing" style="width: 70%; text-align:justify; font-size: 17px"> I graduated from the University Of New South Wales, majoring in finance and actuarial studies.  
 	I am passionate about searching for insights in data. In particular, I like to play around with datasets related to banking, insurance and risk management.</p>
+
+	
+	<a href="#projects" class="title_link"><button class="button" style="margin-bottom: 80px; margin-top: 40px; font-size: 17px;"> Projects  ↓  </button> </a>
+	
+  
+
+	
+	
+	
 	</div>
-	
-	
 	</div>
-	
 	
 	
 	
 	
 	<div class="frame_grey" id="projects">
+	<div class="content">
 	<h2 class="page_title">Projects</h2>
 	
-	<h3 class="subtitle"> Data visualisations </h3>
-	<p class = "writing">My interactive data visualisations created with Tableau can be found <span class="link"><a href="https://public.tableau.com/profile/harry.dong">here</a></span>.</p>	
+	
 	
 	<h3 class="subtitle"> Most recent </h3>
 	
 	
-	<div class="container">
-		<div class="content">
-			<a href="projects/glmnet_insurance">
-			  <div class="content-overlay"></div>
-			  <img class="content-image" src="img/motor_thumb.png">
-			  <div class="content-details fadeIn-bottom">
-				<h3 class="content-title">Project</h3>
-				<p class="content-text">This is a short description</p>
-			  </div>
-			</a>
-		</div>
-		<div class="content">
-			<a href="projects/bank_marketing">
-			  <div class="content-overlay"></div>
-			  <img class="content-image" src="img/bank_thumb.png">
-			  <div class="content-details fadeIn-bottom">
-				<h3 class="content-title">Project</h3>
-				<p class="content-text">This is a short description</p>
-			  </div>
-			</a>
-		</div>
-	<p class="writing" style="line-height:220px; font-size: 30px; font-family: Times New Roman;
-	margin-left:3%;">
+	
+	<p class="writing" style="line-height:220px; font-size: 35px; font-family: Times New Roman;">
 		<a href="projects">. . .</a>
 	</p>	
 	</div>
 	
-	</div>
 	
-
+	
+	
+	<h3 class="subtitle"> Data visualisations </h3>
+	
+	<!--
+	<p class="writing" style="font-style: italic">"Girt by Sea: Australia's performance at Tokyo 2020"</p>
+	<iframe src="https://public.tableau.com/views/Olympics_16289284858840/Dashboard1?:showVizHome=no&:embed=true"
+    width="750" height="550" style="border:none"></iframe>
+    -->
+	
+	<a href="https://public.tableau.com/profile/harry.dong" class="title_link" style="margin-top: 40px;"><button class="button"> 
+    View More </button> </a>
+	</div>
+	</div>
+    
+	
 	
 	<div class="frame" id="contact">
+	<div class="content">
 	<h2 class="page_title"> Contact </h2>
 	<p class="writing"> If you'd like to contact me, shoot me an <span class="link"><a href="mailto:harry.cz.dong@gmail.com">email</a></span>.</p> 
 	<p class="writing">Alternatively, send me a <span class="link"><a href="https://form.jotform.com/212470368706861" target="_blank">message</a></span>.</p>
-
+	</div>
 	</div>
 
 </body>
 
-<footer>
-  <p></p>
-</footer>
+
 
 
 </html>
