--- a/projects.html
+++ b/projects.html
@@ -1,31 +1,34 @@
 <!doctype html>
 
 <html lang="en">
+
+
 <head>
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  
 	<title>Projects</title>
 	<link rel="icon" type="image/png" href="favicon.png"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="alt.css">
-	<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
-    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'>
 </head>
 
-<body class="fade_in">
+<body >
 	
 	
-	<ul class="nav_bar">
-	  <li style="border-bottom: solid; border-color:#E86100; margin-right:50px;"><a href="projects">Projects</a></li>
-	  <li><a href="index">Home</a></li>
-	</ul>
-	
+	<div class="nav_bar">
+	  <a href="projects" style="border-bottom: solid; border-color:#E86100"><p>Projects</p></a>
+	  <a href="index" ><p>Home</p></a>
+	</div>
+	<div class="content">
 	<h2 class="page_title">Projects</h2>
 	
-	<h3 class="subtitle"> Data visualisations </h3>
-	<p class = "writing">My interactive data visualisations created with Tableau can be found <span class="link"><a href="https://public.tableau.com/profile/harry.dong">here</a></span>.</p>
-
-	<h3 class="subtitle"> Posts </h3>
-	
+    <p class="writing">More to come in the future...</p>
+	</div>
 
 </body>
 
