--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
 	<link rel="icon" type="image/png" href="favicon.png"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="alt.css">
-<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
-<link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'>
+	<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
+	<link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'>
 
 </head>
 
@@ -36,18 +40,14 @@
 	</div>
 	
 	
-	<h2 class="page_title"> About me</h2>
+	<h3 class="subtitle"> About me </h3>
 	<p class="writing" style="width: 70%; text-align:justify; font-size: 17px"> I graduated from the University Of New South Wales, majoring in finance and actuarial studies.  
 	I am passionate about searching for insights in data. In particular, I like to play around with datasets related to banking, insurance and risk management.</p>
 
 	
 	<a href="#projects" class="title_link"><button class="button" style="margin-bottom: 80px; margin-top: 40px; font-size: 17px;"> Projects  ↓  </button> </a>
 	
-  
 
-	
-	
-	
 	</div>
 	</div>
 	
@@ -60,25 +60,48 @@
 	
 	
 	
-	<h3 class="subtitle"> Most recent </h3>
 	
+
+
+<div class="row">
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body">
+        <h3 > Motor Insurance Rating </h3>
+		<img class="card-img-top" src="img/glmnet_insurance_card.png" alt="Card image cap">
+        <p class="card-text writing">Constructing a model which estimates the claims losses of a driver based on their characteristics.</p>
+        <a href="projects/glmnet_insurance" class="title_link"><button class="button" style="padding-left: 10px; padding-right:10px"> Read </button> </a>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body">
+         <h3 > Bank Marketing Prediction </h3>
+		<img class="card-img-top" src="img/bank_marketing_card.png" alt="Card image cap">
+        <p class="card-text writing">Predicting the success of a bank telemarketing campaign using economic and customer variables.</p>
+        <a href="projects/bank_marketing" class="title_link"><button class="button" style="padding-left: 10px; padding-right:10px"> Read </button> </a>
+      </div>
+    </div>
+  </div>
+  	
 	
+</div>
 	
-	<p class="writing" style="line-height:220px; font-size: 35px; font-family: Times New Roman;">
+	<p class="writing" style="font-size: 35px; font-family: Times New Roman; margin-top: 20px;">
 		<a href="projects">. . .</a>
-	</p>	
-	</div>
+	</p>
 	
 	
 	
 	
-	<h3 class="subtitle"> Data visualisations </h3>
 	
-	<!--
+	<h2 class="page_title">Data Visualisations</h2>
+
 	<p class="writing" style="font-style: italic">"Girt by Sea: Australia's performance at Tokyo 2020"</p>
 	<iframe src="https://public.tableau.com/views/Olympics_16289284858840/Dashboard1?:showVizHome=no&:embed=true"
     width="750" height="550" style="border:none"></iframe>
-    -->
+
 	
 	<a href="https://public.tableau.com/profile/harry.dong" class="title_link" style="margin-top: 40px;"><button class="button"> 
     View More </button> </a>
@@ -97,6 +120,9 @@
 
 </body>
 
+<script>
+
+</script>
 
 
 
