--- a/projects/bank_marketing.html
+++ b/projects/bank_marketing.html
@@ -23,17 +23,33 @@
 	  <a href="index" ><p>Home</p></a>
 	</div>
 	
-	
+	<div class="frame_grey">
 	<div class="content">
-	<h2 class="page_title" > Predicting the success of a bank telemarketing campaign </h2>
+	<h2 class="page_title" >  Predicting the success of a bank telemarketing campaign </h2>
 	
-	<h3 class="subtitle"> Summary </h3>
-	<p class="writing"> Using various machine learning techniques, I analysed data from a Portuguese bank, 
+		<h3 class="subtitle" > Summary </h3>
+		<div class="article_head">
+			<div class="head_text">
+			
+			<p class = "writing"> Using various predictive models, I analysed data from a Portuguese bank, 
 	and explored which client characteristics are correlated with a successful marketing campaign. I mainly used the <span class="tech">caret</span> package
     in R to fit and evaluate the models. </p>
-	<p class="writing"> This is based on an old undergrad project, which I've expanded by adding a variety of classification models.</p>
-	<a href="../files/Bank Marketing.pdf" class="title_link"><button class="button"> Report </button> </a>
-    </div>
+			
+			<p class="writing"> This is based on an old undergrad project, which I've expanded by adding a variety of classification models.</p>
+			
+			<a href="bank_marketing_dat/Bank Marketing.pdf" class="title_link"><button class="button"> Report </button> </a>
+			
+			</div>
+			
+			<div class="head_image">
+			<img src="bank_marketing_dat/splash.jpg" style="width: 100%; height: 100%; object-fit: cover;">  
+			</div>
+		</div>	
+		
+	</div>
+	</div>
+	
+
 </body>
 
 
