--- a/projects.html
+++ b/projects.html
@@ -5,8 +5,10 @@
 
 <head>
  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   
 	<title>Projects</title>
 	<link rel="icon" type="image/png" href="favicon.png"/>
@@ -24,12 +26,60 @@
 	  <a href="projects" style="border-bottom: solid; border-color:#E86100"><p>Projects</p></a>
 	  <a href="index" ><p>Home</p></a>
 	</div>
+	
 	<div class="content">
 	<h2 class="page_title">Projects</h2>
 	
-    <p class="writing">More to come in the future...</p>
-	</div>
+	
+	
+	
 
+
+<div class="row">
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body">
+        <h3 > Motor Insurance Rating </h3>
+		<img class="card-img-top" src="img/glmnet_insurance_card.png" alt="Card image cap">
+        <p class="card-text writing">Constructing a model which estimates the claims losses of a driver based on their characteristics.</p>
+        <a href="projects/glmnet_insurance" class="title_link"><button class="button" style="padding-left: 10px; padding-right:10px"> Read </button> </a>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body">
+         <h3 > Bank Marketing Prediction </h3>
+		<img class="card-img-top" src="img/bank_marketing_card.png" alt="Card image cap">
+        <p class="card-text writing">Predicting the success of a bank telemarketing campaign using economic and customer variables.</p>
+        <a href="projects/bank_marketing" class="title_link"><button class="button" style="padding-left: 10px; padding-right:10px"> Read </button> </a>
+      </div>
+    </div>
+  </div>
+  	
+	
+</div>
+	
+	<p class="writing" style="font-size: 35px; font-family: Times New Roman; margin-top: 20px;">
+		<a href="projects">. . .</a>
+	</p>
+	
+	
+	
+	
+	
+	<h2 class="page_title">Data Visualisations</h2>
+
+	<p class="writing" style="font-style: italic">"Girt by Sea: Australia's performance at Tokyo 2020"</p>
+	<iframe src="https://public.tableau.com/views/Olympics_16289284858840/Dashboard1?:showVizHome=no&:embed=true"
+    width="750" height="550" style="border:none"></iframe>
+
+	
+	<a href="https://public.tableau.com/profile/harry.dong" class="title_link" style="margin-top: 40px;"><button class="button"> 
+    View More </button> </a>
+	</div>
+	 
+	
 </body>
 
 
