--- a/projects/bank_marketing.html
+++ b/projects/bank_marketing.html
@@ -19,8 +19,8 @@
 	
 	
 	<div class="nav_bar">
-	  <a href="projects" style="border-bottom: solid; border-color:#E86100"><p>Projects</p></a>
-	  <a href="index" ><p>Home</p></a>
+	  <a href="./projects" style="border-bottom: solid; border-color:#E86100"><p>Projects</p></a>
+	  <a href="./index" ><p>Home</p></a>
 	</div>
 	
 	<div class="frame_grey">
