--- a/projects/glmnet_insurance.html
+++ b/projects/glmnet_insurance.html
@@ -25,8 +25,8 @@
 	
 	
 	<div class="nav_bar">
-	<a href="projects" style="border-bottom: solid; border-color:#E86100"><p>Projects</p></a>
-	<a href="index" ><p>Home</p></a>
+	<a href="./projects" style="border-bottom: solid; border-color:#E86100"><p>Projects</p></a>
+	<a href="./index" ><p>Home</p></a>
 	</div>
 	
 	
@@ -199,7 +199,7 @@
 	
 
 	<div class="content" >
-	<h3 class="subtitle" style="display:inline-block"> Notes </h3> 
+	<h3 class="subtitle" style="display:inline-block"> Technical Notes </h3> 
 	<button onclick="toggleNotes()" id="notes_button" style="border:none; display: inline-block; margin-left: 10px; font-family: Lato">show ▼</button>
 	<div id="notes" style="display: none">
 	
