--- a/projects/glmnet_insurance.html
+++ b/projects/glmnet_insurance.html
@@ -25,8 +25,8 @@
 	
 	
 	<div class="nav_bar">
-	<a href="./projects" style="border-bottom: solid; border-color:#E86100"><p>Projects</p></a>
-	<a href="./index" ><p>Home</p></a>
+	<a href="../projects" style="border-bottom: solid; border-color:#E86100"><p>Projects</p></a>
+	<a href="../index" ><p>Home</p></a>
 	</div>
 	
 	
